objects/LAT_MX_QTA_Quota__c.object
<CustomObject>
    <fields>
        <fullName>LAT_MX_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>MX Standard</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>MX On-Trade, MX Off-Trade</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Payer, Consignee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotas</relationshipLabel>
        <relationshipName>Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quotas</relationshipLabel>
        <relationshipName>Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MX_QuotaBalance__c</fullName>
        <description>The system updates this field with the amount of Quota available.</description>
        <label>Quota Balance</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Quota__c</fullName>
        <description>Product quota assigned to client</description>
        <inlineHelpText>Quota assigned to client</inlineHelpText>
        <label>Quota</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_MX_ValiditySince__c</fullName>
        <label>Validity(since)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_ValidityUntil__c</fullName>
        <label>Validity(until)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>LAT Quotas</relationshipLabel>
        <relationshipName>LAT_Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quota</label>
    <listViews>
        <fullName>MX_Cuota_ABSOLUT</fullName>
        <columns>NAME</columns>
        <columns>LAT_MX_Client__c</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAT_MX_ValiditySince__c</columns>
        <columns>LAT_MX_ValidityUntil__c</columns>
        <columns>LAT_MX_Quota__c</columns>
        <columns>LAT_MX_QuotaBalance__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_Product__c</field>
            <operation>contains</operation>
            <value>VERDE</value>
        </filters>
        <label>MX - Cuota ABSOLUT</label>
        <language>en_US</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_Cuota_ABSOLUT_WARHOL_20430</fullName>
        <columns>NAME</columns>
        <columns>LAT_MX_Client__c</columns>
        <columns>LAT_MX_Product__c</columns>
        <columns>LAT_MX_ValiditySince__c</columns>
        <columns>LAT_MX_ValidityUntil__c</columns>
        <columns>LAT_MX_Quota__c</columns>
        <columns>LAT_MX_QuotaBalance__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_MX_Product__c</field>
            <operation>equals</operation>
            <value>ABSOLUT WARHOL 12*750</value>
        </filters>
        <label>MX - Cuota ABSOLUT WARHOL - 20430</label>
        <language>en_US</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_Cuotas_CHIV_12Y750_C_CHIV_18Y200_12</fullName>
        <columns>NAME</columns>
        <columns>LAT_MX_Client__c</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAT_MX_ValiditySince__c</columns>
        <columns>LAT_MX_ValidityUntil__c</columns>
        <columns>LAT_MX_Quota__c</columns>
        <columns>LAT_MX_QuotaBalance__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_MX_Client__c</field>
            <operation>equals</operation>
            <value>OPERADORA PRISSA NVA BODEGA</value>
        </filters>
        <filters>
            <field>LAT_Product__c</field>
            <operation>equals</operation>
            <value>CHIV 12Y750 C/CHIV 18Y200 12PQ</value>
        </filters>
        <label>MX - Cuotas CHIV 12Y750 C/CHIV 18Y200 12</label>
        <language>en_US</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_Cuotas_de_prod</fullName>
        <columns>NAME</columns>
        <columns>LAT_MX_Client__c</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAT_MX_ValiditySince__c</columns>
        <columns>LAT_MX_ValidityUntil__c</columns>
        <columns>LAT_MX_Quota__c</columns>
        <columns>LAT_MX_QuotaBalance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_Product__c</field>
            <operation>startsWith</operation>
            <value>HAVANA TRIBUTO 6*700 2016</value>
        </filters>
        <label>MX - Cuotas de prod</label>
        <language>en_US</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_Search_Cuota_x_Cliente</fullName>
        <columns>NAME</columns>
        <columns>LAT_MX_Client__c</columns>
        <columns>LAT_MX_Product__c</columns>
        <columns>LAT_MX_Quota__c</columns>
        <columns>LAT_MX_QuotaBalance__c</columns>
        <columns>LAT_MX_ValiditySince__c</columns>
        <columns>LAT_MX_ValidityUntil__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_MX_Client__c</field>
            <operation>equals</operation>
            <value>001D0000026Udl8IAC</value>
        </filters>
        <label>MX - Search Cuota x Cliente</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Quotas_vigentes</fullName>
        <columns>NAME</columns>
        <columns>LAT_MX_Client__c</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAT_MX_ValiditySince__c</columns>
        <columns>LAT_MX_ValidityUntil__c</columns>
        <columns>LAT_MX_Quota__c</columns>
        <columns>LAT_MX_QuotaBalance__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_Product__c</field>
            <operation>contains</operation>
            <value>MARTELL VSOP 700+2COP DIR 6PQ</value>
        </filters>
        <filters>
            <field>LAT_MX_Client__c</field>
            <operation>equals</operation>
            <value>C - COSTCO 795</value>
        </filters>
        <label>Quotas vigentes</label>
        <language>en_US</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Quotas_vigentes1</fullName>
        <columns>NAME</columns>
        <columns>LAT_MX_Client__c</columns>
        <columns>LAT_MX_Product__c</columns>
        <columns>LAT_MX_ValiditySince__c</columns>
        <columns>LAT_MX_ValidityUntil__c</columns>
        <columns>LAT_MX_Quota__c</columns>
        <columns>LAT_MX_QuotaBalance__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>contains</operation>
            <value>ebasur01</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>10/20/2015 12:00 AM</value>
        </filters>
        <label>Quotas vigentes1</label>
        <language>en_US</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Quotas_vigentes_asignada</fullName>
        <columns>NAME</columns>
        <columns>LAT_MX_Client__c</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAT_MX_ValiditySince__c</columns>
        <columns>LAT_MX_ValidityUntil__c</columns>
        <columns>LAT_MX_Quota__c</columns>
        <columns>LAT_MX_QuotaBalance__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_MX_ValiditySince__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>LAT_MX_ValidityUntil__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Quotas vigentes asignada</label>
        <language>en_US</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Cuota-{0}</displayFormat>
        <label>Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <recordTypes>
        <fullName>LAT_MX_QTA_Standard</fullName>
        <active>true</active>
        <description>Record Type standard for Mexico</description>
        <label>MX Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LAT_MX_QTA_VR01_ValiditySinceValidation</fullName>
        <active>true</active>
        <description>Validates that the date in field Validity(since) is not after the date in field Validity(until)</description>
        <errorConditionFormula>$RecordType.DeveloperName=&apos;LAT_MX_QTA_Standard&apos;
&amp;&amp;
NOT(ISNULL(LAT_MX_ValiditySince__c))
&amp;&amp;
NOT(ISNULL(LAT_MX_ValidityUntil__c))
&amp;&amp;
LAT_MX_ValiditySince__c &gt; LAT_MX_ValidityUntil__c</errorConditionFormula>
        <errorDisplayField>LAT_MX_ValiditySince__c</errorDisplayField>
        <errorMessage>Cannot be after Validity(until)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_MX_QTA_VR02_ValidityUntilValidation</fullName>
        <active>true</active>
        <description>Validates that the date in field Validity(until) is not before the date in field Validity(since)</description>
        <errorConditionFormula>$RecordType.DeveloperName=&apos;LAT_MX_QTA_Standard&apos; 
&amp;&amp; 
NOT(ISNULL(LAT_MX_ValiditySince__c)) 
&amp;&amp; 
NOT(ISNULL(LAT_MX_ValidityUntil__c)) 
&amp;&amp; 
LAT_MX_ValidityUntil__c &lt; LAT_MX_ValiditySince__c</errorConditionFormula>
        <errorDisplayField>LAT_MX_ValidityUntil__c</errorDisplayField>
        <errorMessage>Cannot be before Validity(since)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_MX_QTA_VR03_QuotaValidation</fullName>
        <active>false</active>
        <description>Validates that the amount Quota entered is greater than 0.</description>
        <errorConditionFormula>$RecordType.DeveloperName=&apos;LAT_MX_QTA_Standard&apos; 
&amp;&amp;
NOT(ISNULL(LAT_MX_Quota__c))
&amp;&amp;
LAT_MX_Quota__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>LAT_MX_Quota__c</errorDisplayField>
        <errorMessage>Must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>